# GenerativeAIExamples

community/developer-blueprint/ai-research-assistant/: Makefile  models.json
community/llm-router/: .gitattributes  .gitignore  README.md  docker-compose.yaml
community/llm-router/ancillary_router_items/: requirements.txt  triton_test_script_requirements.txt
community/llm-router/ancillary_router_items/task_complexity_classifier/: prompt_classifier_traced.pt  task_router.ipynb
community/llm-router/app/: app.py  app_info.py  llm.py  test_client.py
community/llm-router/docker/: app.dockerfile  router_controller.dockerfile  triton.dockerfile
community/llm-router/router_controller/: Cargo.toml  config.yaml
community/llm-router/router_controller/crates/llm-router-benchmarking/: Cargo.toml  README.md
community/llm-router/router_controller/crates/llm-router-benchmarking/src/: main.rs
community/llm-router/router_controller/crates/llm-router-classification/: Cargo.toml  Dockerfile
community/llm-router/router_controller/crates/llm-router-classification/src/: error.rs  lib.rs  main.rs  prelude.rs
community/llm-router/router_controller/crates/llm-router-client/: Cargo.toml
community/llm-router/router_controller/crates/llm-router-client/src/: main.rs
community/llm-router/router_controller/crates/llm-router-gateway-api/: Cargo.toml
community/llm-router/router_controller/crates/llm-router-gateway-api/src/: config.rs  error.rs  lib.rs  main.rs  proxy.rs  stream.rs  triton.rs
community/llm-router/router_controller/crates/llm-router-nats/: Cargo.toml  Dockerfile
community/llm-router/router_controller/crates/llm-router-nats/src/: error.rs  lib.rs  main.rs
community/llm-router/router_controller/scripts/: generate-license-bom
community/llm-router/router_controller/utility_scripts/: run_genai_perf.sh  run_llama3.sh  run_mistral.sh  test_llama3.sh  test_mistral.sh  test_ngc.sh  test_openai.sh  test_parse.py  test_router.sh  test_router_stream.sh
community/llm-router/router_controller/utility_scripts/data/: README.md
