[package]
name = "llm-router-benchmarking"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = "0.17.2"
tokio = { version = "1", features = ["full"] }  # Async runtime
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.12.5"
serde_json = "1.0.117"

# [dependencies.nim-api]
# git = "https://gitlab-master.nvidia.com/dl/ai-services/libraries/rust/nim-api"
# branch = "main"

# [dependencies.nim-http-client]
# git = "https://gitlab-master.nvidia.com/dl/ai-services/libraries/rust/nim-http-client"
# branch = "main"
