[package]
name = "llm-router-client"
version = "0.1.0"
edition = "2021"


[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# futures = "0.3.30"

# -- AI
async-openai = "0.23.4"

# -- Errors
thiserror = "1"

# -- Dervive traits
derive_more = { version = "1.0.0-beta", features = ["from"] }

# -- JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"]}

# -- Web
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
anyhow = "1"
