[package]
name = "llm-router-gateway-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# futures = "0.3.30"
futures-util = "0.3"

# -- Bytes
bytes = "1.6.1"

# -- CLI
clap = { version = "4.5", features = ["derive"] }

# -- Errors
anyhow = "1"
thiserror = "1"

# -- JSON / YAML
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3.9", features = ["macros"]}
serde_yaml = "0.9"

# -- Random numbers
rand = { version = "0.8.5" }

# -- Web
http = "1.1.0"
http-body = "1.0"
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-rustls = "0.27.2"
hyper-util = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2"
reqwest = { version = "0.12.5", features = ["json"] }
openssl = "0.10.66"

[dev-dependencies]
wiremock = "0.6"
